# buybot

./: .env.example  README.md  docker-compose.yaml  package.json
backend/: .env  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
backend/core/: config.py  logging.py
backend/routes/: search.js
backend/tests/: test_api.py
frontend/: index.html  package.json  tailwind.confg.js  vite.config.js
frontend/src/: App.jsx  SearchBar.jsx  SearchResults.jsx  mockProducts.js
