[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Swack",email = "swack.gabe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.113.0",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings==2.3.0",  
    "SQLAlchemy==2.0.24",
    "psycopg2-binary==2.9.9",
    "alembic==1.12.1",  
    "databases[postgresql]==0.3.0",
    "openai==2.0.0",
    "sentence-transformers==2.2.2",
    "rapidfuzz==3.9.7",
    "requests==2.31.0",
    "httpx==0.28.1",
    "beautifulsoup4==4.12.2",
    "playwright==1.41.1",
    "celery==5.5.3",
    "redis==5.2.0",
    "python-json-logger==2.0.7",
    "loguru==0.7.0",
    "python-jose==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pytest==8.3.2",
    "pytest-asyncio==0.21.0",
    "black==23.12.0",
    "ruff==0.14.2"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
